--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,13 @@
     completions."
   </string>
 
+  <!-- Oauth client-->
+  <string name="web_client_id">726718017398-nb9cq3ji1rbo4no9js0nt0bdj7i2qr2e.apps.googleusercontent.com</string>
+  <string name="request_passphrase">Request Passphrase</string>
+  <string name="action_logout">Sign out</string>
+  <string name="base_url">http://10.0.2.2:18081/rest/</string> <!-- Access localhost from emulator. -->
+  <string name="oauth2_header_format">Bearer %1$s</string>
+
   <!-- TODO: Remove or change this placeholder text -->
   <string name="hello_blank_fragment">Hello blank fragment</string>
   <string name="search_for_a_friend">Search for a friend...</string>
