--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
   <string name="hello_blank_fragment">Hello blank fragment</string>
   <string name="search_for_a_friend">Search for a friend...</string>
   <string name="create_account">Create account</string>
+  <string name="title_activity_create_account_basic_test">CreateAccountBasicActivityTest</string>
 </resources>
