I have connected the follow views so that users can interact with followers and following from a new activity that allows them to see the pet and it's health points in a bottom nav activity.  In addition to the pet view, there is a wall view, where users can write funny things in an EditText and change the other player's wall.  It's an implementation of the original facebook wall.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,10 @@
   <string name="create_account">Create account</string>
   <string name="title_activity_create_account_basic_test">CreateAccountBasicActivityTest</string>
   <string name="title_activity_friend">FriendActivity</string>
-  <string name="title_home">Home</string>
-  <string name="title_dashboard">Dashboard</string>
+  <string name="title_pet">Pet</string>
+  <string name="title_wall">Wall</string>
   <string name="title_notifications">Notifications</string>
+  <string name="wall_hint">Mark it up!</string>
+  <string name="wall_button">Change wall</string>
+  <string name="wall_cancel">cancel</string>
 </resources>
