Added a Lottie animation. Sign out on back press from MainActivity (if Nav Drawer Closed). Greatly simplified the sign in view to meet Material Design Standards.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
   </string>
 
   <!-- Oauth client-->
-  <string name="web_client_id">156574812337-gdgvafho71lln8ab1rfge19gedh5n93q.apps.googleusercontent.com</string>
+  <string name="web_client_id">726718017398-nb9cq3ji1rbo4no9js0nt0bdj7i2qr2e.apps.googleusercontent.com</string>
   <string name="request_passphrase">Request Passphrase</string>
   <string name="action_logout">Sign out</string>
   <string name="base_url">http://10.0.2.2:8080/emoji-pets/</string> <!-- Access localhost from emulator. -->
@@ -45,4 +45,6 @@
   <string name="settings">Settings</string>
   <string name="followers">Followers</string>
   <string name="following">Following</string>
+  <string name="emoji_petz">Emoji Petz</string>
+  <string name="sign_in">Sign in with Google</string>
 </resources>
