I have prepped the strings for writing a locale for Tagalog.

--- a/app/src/main/res/values-fil-rPH/strings.xml
+++ b/app/src/main/res/values-fil-rPH/strings.xml
@@ -58,7 +58,7 @@
   <string name="and_just_one_emoji">And just one emoji</string>
   <string name="status">Status</string>
   <string name="post">post</string>
-  <string name="cuddle">Cuddle</string>
+  <string name="cuddle">Cuddlesilly</string>
   <string name="play">Play</string>
   <string name="hungry">Hungry</string>
   <string name="potty">Potty</string>
