This code is currently working on the AWS side, but the SalesForce side won't authenticate and returns a 404 error from the request.

--- a/app/src/main/res/values-fil-rPH/strings.xml
+++ b/app/src/main/res/values-fil-rPH/strings.xml
@@ -25,7 +25,7 @@
   <string name="web_client_id">726718017398-nb9cq3ji1rbo4no9js0nt0bdj7i2qr2e.apps.googleusercontent.com</string>
   <string name="request_passphrase">Request Passphrase</string>
   <string name="action_logout">Log out</string>
-  <string name="base_url">http://emoji-petz.us-east-2.elasticbeanstalk.com/emoji-pets/</string> <!-- Access localhost from emulator. -->
+  <string name="base_url_aws">http://emoji-petz.us-east-2.elasticbeanstalk.com/emoji-pets/</string> <!-- Access localhost from emulator. -->
   <string name="oauth2_header_format">Bearer %1$s</string>
 
   <string name="pet_name">Pangalan ng alaga mong hayop: </string>
